feat: PayTR test süiti geliştirmeleri ve test raporlama düzeltmeleri
- Test raporlama scriptini düzelt: testng-results.xml yerine TEST-TestSuite.xml kullan
- Kapsamlı test süitleri ekle: API, Security, Performance, Smoke testleri
- Test sınıflarını genişlet: PayTRAPITests, PayTRSecurityTests, PayTRPerformanceTests
- CI/CD pipeline konfigürasyonu: GitHub Actions, Jenkins, Docker desteği
- Test utility sınıfları ekle: APITestUtils, SecurityTestUtils, PerformanceTestUtils
- Detaylı test analiz raporları: Başarısız testlerin analizi ve çözüm önerileri
- Test data yönetimi: Properties dosyaları ile konfigürasyon
- TestNG XML konfigürasyonları: Farklı test süitleri için ayrı XML dosyaları

Düzeltilen sorunlar:
- Test sonuçlarının 0 olarak raporlanması sorunu çözüldü
- WebDriver initialization sorunları tespit edildi
- Element locator hataları analiz edildi
- API test konfigürasyon sorunları belirlendi

Test sonuçları: 66 test çalıştırıldı, 37 başarılı (%56.1 başarı oranı)
Kritik sorunlar tespit edildi ve çözüm önerileri hazırlandı.